--- a/package.json
+++ b/package.json
@@ -11,5 +11,15 @@
   },
   "dependencies": {
     "markdown-it": "^13.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-summary-reporter": "^0.0.2"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
