cambios en package.json para hacer el modulo instable con npm install

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "md-links",
   "version": "0.1.0",
+  "description": "valida links en archivos markdown",
+  "main": "src/index.js",
+  "author": "Penélope Logos <penelopelogos@gmail.com> (https://github.com/PenLogos)",
   "engines": {
     "node": ">=16.x"
   },
@@ -20,6 +23,7 @@
     "jest-summary-reporter": "^0.0.2"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "install": "npm install"
   }
 }
