--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
   },
   "scripts": {
     "test": "jest",
-    "install": "npm"
+    "install": "echo postinstall script executed successfully"
   }
 }
