correcciones a package.json para que funcionen npm test y npm run pretest

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "valida links en archivos markdown",
   "main": "src/index.js",
   "author": "Penélope Logos <penelopelogos@gmail.com> (https://github.com/PenLogos)",
+  "license":"ISC",
   "engines": {
     "node": ">=16.x"
   },
@@ -20,9 +21,11 @@
     "@babel/preset-env": "^7.23.3",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "jest-summary-reporter": "^0.0.2"
+    "jest-summary-reporter": "^0.0.2",
+    "eslint": "^7.32.0"
   },
   "scripts": {
+    "pretest": "eslint .",
     "test": "jest",
     "install": "echo postinstall script executed successfully"
   }
