--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "valida links en archivos markdown",
   "main": "src/index.js",
   "author": "Penélope Logos <penelopelogos@gmail.com> (https://github.com/PenLogos)",
-  "license":"ISC",
+  "license": "ISC",
   "engines": {
     "node": ">=16.x"
   },
@@ -14,19 +14,21 @@
     "commit": "d257c41694344460623eb1f1bb2a690bdfe33f83"
   },
   "dependencies": {
+    "g": "^2.0.1",
     "markdown-it": "^13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "babel-jest": "^29.7.0",
+    "eslint": "^7.32.0",
     "jest": "^29.7.0",
-    "jest-summary-reporter": "^0.0.2",
-    "eslint": "^7.32.0"
+    "jest-summary-reporter": "^0.0.2"
   },
   "scripts": {
     "pretest": "eslint .",
     "test": "jest",
     "install": "echo postinstall script executed successfully"
-  }
+  },
+  "bin": "./src/cli.js"
 }
