configuración eslint y correcciond e errores

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,13 @@
     "node": true
   },
   "parserOptions": {
-    "ecmaVersion": 8
+    "ecmaVersion": 8,
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-var": "error",
+    "eqeqeq": "error",
+    "indent": ["error", 2]
   }
+  
 }
